--- a/src/Layout/Section1/Section1.css
+++ b/src/Layout/Section1/Section1.css
@@ -1,6 +1,16 @@
 .image-container {
     position: relative;
   }
+
+ 
+  .image-top{
+    background-color: #272160;
+  }
+
+  .bottom-text {
+    font-size: 24px;
+    font-weight: lighter;
+  }
   
   .overlay-text {
     position: absolute;
@@ -14,9 +24,14 @@
     font-weight: bold;
     font-size: 90;
   }
+
+  .top-text{
+    top: 5%;
+  }
   
-  .top-text {
-    top: 8%;
+  .top-text h1{
+    font-size: 90px;
+    font-weight: bold;
   }
   
   .bottom-text {
@@ -29,7 +44,8 @@
 
   .text-msg{
     color: #b94c99;
-    
+    font-size: 24px;
+    font-weight: lighter;
   }
 
   .btn-outline-primary{
@@ -42,12 +58,16 @@
     color: aliceblue;
   }
 
-  .btn-outline-secondary{
-    background: var(--unnamed-color-0e000b) 0% 0% no-repeat padding-box;
-border: 1px solid var(--unnamed-color-b94c99);
-background: #0E000B 0% 0% no-repeat padding-box;
-border: 1px solid #B94C99;
-border-radius: 20px;
-opacity: 1;
-color: aliceblue;
-  }
+    .btn-outline-secondary {
+      background: var(--unnamed-color-0e000b) 0% 0% no-repeat padding-box;
+      border: 1px solid var(--unnamed-color-b94c99);
+      background: #0E000B 0% 0% no-repeat padding-box;
+      border: 1px solid #B94C99;
+      border-radius: 20px;
+      opacity: 1;
+      color: aliceblue;
+    }
+
+ 
+
+    
